GIA-162 Spring Boot migration